--- a/styles/typography.css
+++ b/styles/typography.css
@@ -9,7 +9,7 @@ h1 {
 
 h2 {
   font-size: 1.3rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 h3 {
@@ -20,14 +20,6 @@ h3 {
 h4 {
   font-size: 0.9rem;
   font-weight: 600;
-}
-
-.section-heading {
-  font-weight: 500;
-  grid-column: 1 / -1;
-  height: auto;
-  align-self: start;
-  grid-row: auto;
 }
 
 .body-1 {
